--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+
+<head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="launch.css" />
+    <title>homepage</title>
 </head>
+
 <body>
-：）
+    <div id="setting"><img src="setting.png"><input type="password" id="token" name="token" placeholder="token"></div>
+    <div id="link"><input type="text"><button class="btn" id="ok-btn">ok</button></div>
+    <div id="keyboard">
+        <div id="keyboardPad"></div>
+        <ul>
+            <span><li id="49">1</li><img src=""></span>
+            <span><li id="50">2</li><img src=""></span>
+            <span><li id="51">3</li><img src=""></span>
+            <span><li id="52">4</li><img src=""></span>
+            <span><li id="53">5</li><img src=""></span>
+            <span><li id="54">6</li><img src=""></span>
+            <span><li id="55">7</li><img src=""></span>
+            <span><li id="56">8</li><img src=""></span>
+            <span><li id="57">9</li><img src=""></span>
+            <span><li id="48">0</li><img src=""></span>
+        </ul>
+        <ul>
+            <span><li id="81">Q</li><img src=""></span>
+            <span><li id="87">W</li><img src=""></span>
+            <span><li id="69">E</li><img src=""></span>
+            <span><li id="82">R</li><img src=""></span>
+            <span><li id="84">T</li><img src=""></span>
+            <span><li id="89">Y</li><img src=""></span>
+            <span><li id="85">U</li><img src=""></span>
+            <span><li id="73">I</li><img src=""></span>
+            <span><li id="79">O</li><img src=""></span>
+            <span><li id="80">P</li><img src=""></span>
+        </ul>
+        <ul>
+            <span><li id="65">A</li><img src=""></span>
+            <span><li id="83">S</li><img src=""></span>
+            <span><li id="68">D</li><img src=""></span>
+            <span><li id="70">F</li><img src=""></span>
+            <span><li id="71">G</li><img src=""></span>
+            <span><li id="72">H</li><img src=""></span>
+            <span><li id="74">J</li><img src=""></span>
+            <span><li id="75">K</li><img src=""></span>
+            <span><li id="76">L</li><img src=""></span>
+        </ul>
+        <ul>
+            <span><li id="90">Z</li><img src=""></span>
+            <span><li id="88">X</li><img src=""></span>
+            <span><li id="67">C</li><img src=""></span>
+            <span><li id="86">V</li><img src=""></span>
+            <span><li id="66">B</li><img src=""></span>
+            <span><li id="78">N</li><img src=""></span>
+            <span><li id="77">M</li><img src=""></span>
+        </ul>
+    </div>
 </body>
+<script type="text/javascript" src="jquery-3.1.1.js"></script>
+<script type="text/javascript" src="md5.min.js"></script>
+<script type="text/javascript" src="launch.js"></script>
+
 </html>
